--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=Sql0102)!)@
+spring.datasource.url=jdbc:mysql://localhost:3306/bitcoin_kw?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
+spring.datasource.username=bitcoin_kw
+spring.datasource.password=utZa2AMc
+server.port=6176
